# OpenTTD

./: AGENT_INTEGRATION_PLAN.md  AIRPORT_SPECIALIST.md  CLAUDE.md  CMakeLists.txt
ai-agent-workspace/: AGENT_RULES.md  AIR_SPECIALIST.md  MARINE_SPECIALIST.md  OVERSEER.md  ROAD_SPECIALIST.md  ROUND_STATE.md  TRAIN_SPECIALIST.md
cmake/: FindVterm.cmake
src/: CMakeLists.txt  ai_agent_terminal_gui.cpp  ai_agent_terminal_gui.h  command.cpp  console_cmds.cpp  openttd.cpp  signal.cpp  thread.h  window_type.h
src/os/macosx/: macos.h  macos.mm
src/rpc/: CMakeLists.txt  rpc_handlers.cpp  rpc_handlers.h  rpc_handlers_action.cpp  rpc_handlers_infra.cpp  rpc_handlers_meta.cpp  rpc_handlers_query.cpp  rpc_handlers_viewport.cpp  rpc_server.cpp  rpc_server.h
src/terminal/: AIAgentLaunch.cpp  AIAgentLaunch.h  CMakeLists.txt  ShellProcess.cpp  ShellProcess.h  TerminalSession.cpp  TerminalSession.h
src/widgets/: CMakeLists.txt  ai_agent_terminal_widget.h
ttdctl/: CMakeLists.txt
ttdctl/src/: cli_common.cpp  cli_common.h  commands_action.cpp  commands_infra.cpp  commands_query.cpp  commands_vehicle.cpp  main.cpp  rpc_client.cpp  rpc_client.h
